Z-index and overflow-x fixed on the admin panel

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,3 +168,14 @@
 .leaflet-control-attribution {
   display: none !important;
 }
+
+.leaflet-container {
+  z-index: 0 !important;
+}
+
+.leaflet-pane,
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 0 !important;
+}
+
